--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,84 @@
 /* Global */
 
+body {
+    font-family: 'Heebo', sans-serif;
+}
+
+a {
+    color: #000;
+}
+
+h1 {
+    margin: 0;
+}
+
+main {
+    margin: auto;
+    padding: 0 20%;
+}
+
+@media only screen and (max-width: 600px) {
+    main {
+        padding: 5%;
+    }
+}
+
+/* Navigation */
+
+header {
+    align-items: center;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 10px 15px;
+}
+
+.header-logo {
+    height: 70px;
+    margin: 0.67rem 0;
+}
+
+header ul {
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+    padding: 0;
+    width: 270px;
+}
+
+header a {
+    font-weight: 500;
+    text-decoration: none;
+}
+
+header a:active {
+    text-decoration: underline;
+}
+
+.skip-to {
+    align-items: center;
+    background: #000;
+    color: #FFF;
+    display: flex;
+    height: 30px;
+    padding: 8px;
+    position: absolute;
+    transform: translateY(-120%);
+    transition: transform 0.3s;
+}
+  
+.skip-to:focus {
+    transform: translateY(0%);
+}
+
+@media only screen and (max-width: 600px) {
+    header ul {
+        width: 250px;
+        margin-top: 5px;
+    }
+}
+
+
 /* Homepage */
 
 /* About */
